Minor code clean-up and TODO-fication
